--- a/button.scss
+++ b/button.scss
@@ -1,3 +1,7 @@
+$font-size:30px;
+
+
+
 .button{
     margin:0 auto;
     text-align: center;
@@ -6,5 +10,7 @@
     button{
         color:blue;
         font-weight: bold;
+        font-size:$font-size;
     }
 }
+
