--- a/button.css
+++ b/button.css
@@ -1,10 +1,10 @@
-.button {
+.button2 {
   margin: 0 auto;
   text-align: center;
   width: 400px;
   margin-top: 100px;
 }
-.button button {
+.button2 button {
   color: blue;
   font-weight: bold;
   font-size: 30px;
