--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,11 @@
 $a-color:red;
 $bg-color:blue;
-$font-size:10px;
+$font-size:20px;
 
+
+@function activeFontSize($base-size){
+    @return $base-size + 2px;
+}
 
 
 .lists{
@@ -13,7 +17,7 @@ $font-size:10px;
     justify-content: space-between;
     li{
         text-align: center;
-        font-size:$font-size+20px;
+        font-size:$font-size+10px;
     a{
         color:$a-color;
         font-weight: italic;
@@ -23,3 +27,37 @@ $font-size:10px;
 
 
 
+
+.scss-lists{
+  list-style: none;
+  display:flex;
+  justify-content: space-between;
+  margin:0px;
+  padding:0px;
+    li{
+    width:25%;
+    text-align:center;
+    a{
+     @include button(8px);
+
+      &:hover{
+      color: #da1e32;
+      background-color:blue;
+      }
+      &.active{
+        color:green;
+        font-size: activeFontSize($font-size);
+      }
+    }
+
+    }
+}
+@mixin button($font-size) {
+  color: #333;
+  font-size: 16px;
+  display: inline-block;
+  margin-top: 20px;
+  padding: 8px 16px;
+  border: 1px solid #333;
+  text-decoration: none;
+}
