--- a/style.scss
+++ b/style.scss
@@ -61,3 +61,10 @@ $font-size:20px;
   border: 1px solid #333;
   text-decoration: none;
 }
+
+.stash-sass{
+    width:200px;
+    height:200px;
+    margin:0 auto;
+    background-color:pink;
+}
