--- a/style.css
+++ b/style.css
@@ -26,24 +26,26 @@
   width: 25%;
   text-align: center;
 }
-.scss-lists li a {
-  color: #333;
-  font-size: 20px;
-}
 .scss-lists li a:hover {
   color: #da1e32;
   background-color: blue;
 }
 .scss-lists li a.active {
   color: green;
+  font-size: 22px;
 }
 
-.button, .scss-lists li a {
-  color: #333;
-  font-size: 16px;
-  display: inline-block;
-  margin-top: 20px;
-  padding: 8px 16px;
-  border: 1px solid #333;
-  text-decoration: none;
+.stash-sass {
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+  background-color: pink;
+}
+
+.card-items {
+  background-color: green;
+  width: 500px;
+  height: 500px;
+  margin: 0 auto;
+  margin-top: 50px;
 }
