--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@
   list-style: none;
   justify-content: space-between;
 }
+
 .lists li {
   text-align: center;
   font-size: 30px;
 }
+
 .lists li a {
   color: red;
   font-weight: italic;
@@ -22,14 +24,17 @@
   margin: 0px;
   padding: 0px;
 }
+
 .scss-lists li {
   width: 25%;
   text-align: center;
 }
+
 .scss-lists li a:hover {
   color: #da1e32;
   background-color: blue;
 }
+
 .scss-lists li a.active {
   color: green;
   font-size: 22px;
@@ -48,4 +53,14 @@
   height: 500px;
   margin: 0 auto;
   margin-top: 50px;
+}
+
+ul {
+  list-style: none;
+}
+
+.number ul li {
+  background-color: red;
+  width: 300px;
+  height: 100px;
 }
