--- a/style.scss
+++ b/style.scss
@@ -28,6 +28,7 @@ $font-size:20px;
 
 
 
+
 .scss-lists{
   list-style: none;
   display:flex;
@@ -73,4 +74,15 @@ $font-size:20px;
      height:500px;
      margin:0 auto;
      margin-top:50px;
+}
+
+
+ul{
+  list-style: none;
+}
+
+.number ul li {
+  background-color: red;
+  width:300px;
+  height:100px;
 }
